Fix issue where new profiles are not saved correctly

Due to new code untranslatedName, the saving of the profile was not
correct.  This patch fixes that.

BUG: 303354
REVIEW: 105648
FIXED-IN: 4.9.0